# groot

./: .gintrc  .gitignore  CMakeLists.txt  GCalReadme.txt  README.md  Readme.md  co60.cal  junk.C  makefile  test.c  test.cal
cmake/: GrootPluginConfig.cmake.in
docs/: manual.txt
hist/: doDraw.c
include/: GCalibration.h  GCalibrator.h  GCanvas.h  GCommands.h  GDecayNucleus.h  GH1D.h  GHTTPConnection.h  GListTree.h  GMarker.h  GNucleus.h  GObjectManager.h  GOptions.h  GROI.h  GTransition.h  Gint.h  Gtypes.h  Histomatic.h
include/Plugin/: GPlugin.h  GPluginAction.h  GPluginContext.h  GPluginEvent.h  GPluginHost.h  GPluginManager.h  GPluginSession.h  GPluginVersion.h
libraries/: CMakeLists.txt
libraries/GApp/: CMakeLists.txt  Gint.cxx  Linkdef.h
libraries/GCore/: CMakeLists.txt  GHTTPConnection.cxx  GObjectManager.cxx  GOptions.cxx  Gint.cxx
libraries/GPlugin/: CMakeLists.txt  GPluginLoader.cxx  GPluginLoader.h  GPluginManager.cxx  GPluginManifest.cxx  GPluginManifest.h  GPluginRegistry.cxx  GPluginRegistry.h  GPluginSessionRegistry.cxx  GPluginSessionRegistry.h
libraries/GPlugin/tests/: CMakeLists.txt  GPluginManagerTest.cxx  MissingSymbolsPlugin.cxx  MockPlugin.cxx
libraries/GRoot/: CMakeLists.txt  GCalibration.cxx  GCalibrator.cxx  GCanvas.cxx  GCommands.cxx  GH1D.cxx  GH2D.cxx  GMarker.cxx  GNucleus.cxx  GPeak.cxx  GROI.cxx  GTransition.cxx  LinkDef.h
libraries/GRoot/tests/: CMakeLists.txt  GCanvasPluginInteractionTest.cxx
libraries/GTools/: CMakeLists.txt  GDecayNucleus.cxx  GNucleus.cxx  Linkdef.h
libraries/GUI/: Histomatic.cxx
libraries/Gint/: Gint.cxx
libraries/Histomatic/: CMakeLists.txt  GEventTimer.cxx  GG.cxx  GListTree.cxx  Histomatic.cxx  Linkdef.h
scripts/: doCal.c  doDraw.c
